Thu Dec  2 02:30:50 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb: fixed positional wording to match revised order.

Thu Dec  2 01:24:39 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/lib/json/common.rb: don't use iconv on 1.9.
	  patched by Shota Fukumori [ruby-core:33164]

Thu Dec  2 01:02:03 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update github/flori/json from 1.4.2+ to
	  e22b2f2bdfe6a9b0. this fixes some bugs.

Thu Dec  2 00:05:44 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb: improve rdoc.
	  This change the order of chapter because such overview should
	  begin with simple examples.
	  patched by Eric Hodel [ruby-core:33469]

Wed Dec  1 22:01:49 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (Init_Numeric): fixed a potential bug when using bccwin32
	  ruby with Microsoft's dll, though we already gave up of supporting
	  bccwin32. [ruby-core:33503]

Wed Dec  1 21:43:21 2010  Tanaka Akira  <akr@fsij.org>

	* array.c: parenthesize macro arguments.

Wed Dec  1 21:41:57 2010  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_addrinfo.rb: extract Errno::EADDRINUSE as a method.

	* test/socket/test_socket.rb: ditto.

Wed Dec  1 15:08:32 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/openssl/test_ssl.rb (test_not_started_session): non socket
	  argument of SSLSocket.new is not supported on Windows.

Wed Dec  1 14:36:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_memhash): zero-filled strings should return
	  different values.  [ruby-core:33500]

Wed Dec  1 14:27:49 2010  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 2.0.0 r5952.
	* test/minitest/*.rb: ditto.
	* lib/test/unit.rb: Compatibility fix for minitest changes.

Wed Dec  1 10:16:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): fix typo (not 0xFD but 0xFE).

Wed Dec  1 09:28:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: Follow .gnu_debuglink section.